manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82265576"
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: "82265576"
        command: ["java","-jar","/app.jar"]
        args: ["--spring.config.location=file:/config/application.yml"]
        volumeMounts:
        - mountPath: /mnt/cloud-sample
          name: "82265576-volume"
          readOnly: false
          subPath: cloud-sample
        - mountPath: /config
          name: application-properties
          readOnly: true

      volumes:
      - name: "82265576-volume"
        persistentVolumeClaim:
          claimName: ce-aa-std-pvc
      - name: application-properties
        configMap:
          name: "82265576-configmap"
          items:
          - key: application.yml
            path: application.yml
          defaultMode: 420
